# rust-never-type

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
