[package]
name = "never-type"
version = "0.1.1"
authors = ["Seulgi Kim <seulgi.kim@kodebox.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "http://github.com/CodeChain-io/rust-never-type"
keywords = ["never", "type", "empty"]
description = "This library is an alternative implementation of never type for stable rust."

[dependencies]
